app titles, media querry for background bug on mobile

--- a/src/sass/components/_contact.scss
+++ b/src/sass/components/_contact.scss
@@ -19,6 +19,7 @@ textarea {
 
 	&__container {
 		margin: 0 auto;
+		margin-top: 3rem;
 		width: 95%;
 		max-width: 130rem;
 		display: flex;
