--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -11,9 +11,9 @@
     background-attachment: fixed;
     position: relative;
 
-    // @media only screen and (max-width: 600px) {
-    //     background-size: contain;
-    // }
+    @media only screen and (max-width: 900px) {
+        background-attachment: inherit;
+    }
 
     &__logo {
         position: relative;
